lander.lessons.lander.lvl2_locate_landing_zone.LocateLandingZone.scala.error
Lander:3: error: method apply of type lessons.lander.universe.Point in object Point does not take type parameters.
var fin:Point = Point(0,0)[Point]
                          ^Lander:6: error: type mismatch;
 found   : Unit
 required: lessons.lander.universe.Segment
}
^